[package]
name = "systemprompt-core-database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Database abstraction layer for SystemPrompt supporting SQLite, PostgreSQL, and MySQL"
keywords = ["database", "abstraction", "sqlx", "repository", "pattern"]
categories = ["database"]
documentation = "https://docs.rs/systemprompt-core-database"

[lints]
workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }

# Database
sqlx = { workspace = true, features = ["postgres", "uuid"] }

# SystemPrompt dependencies
systemprompt-traits = { path = "../../shared/traits" }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
rust_decimal = { workspace = true }

# Optional API dependencies
axum = { workspace = true, optional = true }
inventory = { workspace = true, optional = true }

[features]
default = []
api = ["axum", "inventory"]