[package]
name = "systemprompt-core-files"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "File management module for SystemPrompt"

[lints]
workspace = true

[dependencies]
systemprompt-core-database = { path = "../database" }
systemprompt-core-logging = { path = "../log" }
systemprompt-models = { path = "../../shared/models" }
systemprompt-identifiers = { path = "../../shared/identifiers" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
