[package]
name = "systemprompt-core-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core scheduler module for SystemPrompt OS - background jobs and cron tasks"

[lints]
workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
tokio-cron-scheduler = { workspace = true }

# Database
sqlx = { workspace = true }

# UUID for job IDs
uuid = { workspace = true }

# URL parsing
url = { workspace = true }

# Core libs
systemprompt-core-system = { path = "../core" }
systemprompt-core-database = { path = "../database" }
systemprompt-core-logging = { path = "../log" }
systemprompt-core-ai = { path = "../ai" }
systemprompt-core-blog = { path = "../blog" }
systemprompt-core-agent = { path = "../agent" }
systemprompt-core-users = { path = "../users" }
systemprompt-traits = { path = "../../shared/traits" }
systemprompt-identifiers = { path = "../../shared/identifiers" }
systemprompt-models = { path = "../../shared/models" }

# Traits
async-trait = { workspace = true }
thiserror = { workspace = true }

# Validation
validator = { workspace = true }

# Static content generation (markdown, templates, sitemap)
comrak = "0.17"              # Markdown → HTML conversion (GFM extensions)
handlebars = "4.1"           # Template rendering with {{VARIABLE}} syntax
quick-xml = "0.31"           # XML generation for sitemaps

# HTTP client (already available via reqwest in workspace)
reqwest = { workspace = true, features = ["json"] }

[dev-dependencies]
wiremock = "0.5"             # HTTP mocking for tests
tokio-test = { workspace = true }
tempfile = "3"               # Temporary directories for tests
serde_json = { workspace = true }

[features]
default = []
