[package]
name = "systemprompt-discord"
version = "1.0.0"
edition = "2021"
description = "Discord messaging CLI extension for SystemPrompt"
license = "MIT"

[[bin]]
name = "systemprompt-discord"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.47", features = ["full"] }

# HTTP client for Discord API
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
secrecy = "0.10"
colored = "2.2"

# SystemPrompt core (for secrets loading)
systemprompt.workspace = true
