[package]
name = "systemprompt-mcp-infrastructure"
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
authors = ["SystemPrompt <hello@systemprompt.io>"]
license = "Apache-2.0"
description = "MCP server for SystemPrompt cloud infrastructure management - sync, deploy, and monitor"
repository = "https://github.com/systempromptio/systemprompt-mcp-infrastructure"
homepage = "https://systemprompt.io"
keywords = ["mcp", "infrastructure", "cloud", "sync", "deploy"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "systemprompt-infrastructure"
path = "src/main.rs"

[dependencies]
# Direct runtime dependencies
anyhow = "1.0"
tokio = { version = "1.47", features = ["full"] }

# MCP Protocol
rmcp = { version = "0.8.1", features = ["server", "client", "transport-io", "transport-streamable-http-server", "transport-streamable-http-server-session", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "macros", "auth"] }

# Web framework
axum = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# JSON Schema
schemars = "1.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "migrate", "chrono", "rust_decimal"] }

# UUID generation
uuid = { version = "1.18", features = ["v4", "serde"] }

# Cryptographic hashing
sha2 = "0.10"

# Directory handling
dirs = "5.0"

# Logging/tracing
tracing = "0.1"

# Core facade
systemprompt = { git = "https://github.com/systempromptio/systemprompt-core", branch = "main", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
serial_test = "3.0"
once_cell = "1.19"
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
return_self_not_must_use = "allow"
must_use_candidate = "allow"
trivially_copy_pass_by_ref = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
format_push_string = "allow"
uninlined_format_args = "allow"
result_unit_err = "allow"
perf = { level = "warn", priority = -1 }
suspicious = { level = "deny", priority = -1 }
missing_docs_in_private_items = "allow"
too_many_arguments = "deny"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
derive_partial_eq_without_eq = "allow"
cognitive_complexity = "warn"
type_complexity = "warn"
too_many_lines = "warn"
expect_used = "warn"
unwrap_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"
inefficient_to_string = "warn"
unnecessary_wraps = "warn"
unused_async = "warn"
similar_names = "allow"
struct_field_names = "allow"
needless_pass_by_value = "warn"
ref_option = "allow"
match_same_arms = "allow"
single_match_else = "allow"
assigning_clones = "allow"

if_not_else = "warn"
redundant_else = "warn"
manual_let_else = "warn"
match_bool = "warn"
option_if_let_else = "allow"
items_after_statements = "warn"
semicolon_if_nothing_returned = "warn"

or_fun_call = "warn"
redundant_clone = "warn"
unnecessary_to_owned = "warn"
implicit_clone = "warn"
large_futures = "warn"

match_wild_err_arm = "warn"

dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"
exit = "deny"
rc_mutex = "deny"
empty_structs_with_brackets = "warn"
rest_pat_in_fully_bound_structs = "warn"
clone_on_ref_ptr = "warn"
separated_literal_suffix = "warn"
try_err = "warn"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
