[package]
name = "systemprompt-mcp-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared utilities for the systemprompt.io template's bundled Model Context Protocol (MCP) servers."
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
systemprompt = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
