[package]
name = "system-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "system-tools"
path = "src/main.rs"

[dependencies]
# Core facade (single dependency for all systemprompt-core)
systemprompt = { git = "https://github.com/systempromptio/systemprompt-core", branch = "main", features = ["full"] }

# Runtime
anyhow.workspace = true
tokio.workspace = true

# MCP Protocol
rmcp.workspace = true

# HTTP
axum.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# File operations
glob.workspace = true
regex.workspace = true
walkdir.workspace = true

# Utilities
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true

[lints]
workspace = true
