[package]
name = "systemprompt-web-admin"
version.workspace = true
edition.workspace = true
license = "MIT"

[dependencies]
# Foundation
systemprompt-web-shared = { workspace = true }
systemprompt = { workspace = true }

# Database
sqlx = { workspace = true }

# Web framework
axum = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Crypto & encoding
sha2 = { workspace = true }
chacha20poly1305 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

# Templating
handlebars = { workspace = true }
indexmap = { workspace = true }

# Archive
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
tempfile = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Utilities
walkdir = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }

[lints]
workspace = true
