[package]
name = "systemprompt-web-jobs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
systemprompt-web-shared = { workspace = true }
systemprompt-web-admin = { workspace = true }
systemprompt-web-content = { workspace = true }
# Audit: uses ai, content, database, extension, generator, identifiers, models, traits — requires `full`.
systemprompt = { workspace = true, features = ["full"] }
sqlx = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
inventory = { workspace = true }

# Job registration macros expand to ::inventory::submit! paths; machete
# cannot see macro-expansion usage.
[package.metadata.cargo-machete]
ignored = ["inventory"]

[lints]
workspace = true
