[package]
name = "systemprompt-web-site"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Public site extension for the systemprompt.io template: pages, guides, and static-site routes for the self-hosted AI governance binary."
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
systemprompt-web-shared = { workspace = true }
# Audit: uses database, extension, models, template_provider — needs `database`.
systemprompt = { workspace = true, features = ["database"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
