[package]
name = "system-tools"
version = "0.1.0"
edition = "2021"
authors = ["SystemPrompt"]
license = "MIT"
description = "MCP server providing Claude Code-style file editing tools"

[[bin]]
name = "system-tools"
path = "src/main.rs"

[dependencies]
# Runtime
anyhow = "1.0"
tokio = { version = "1.47", features = ["full"] }
dotenvy = "0.15"

# MCP Protocol
rmcp = { version = "0.8.1", features = ["server", "transport-io", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

# File operations
glob = "0.3"
regex = "1.11"
walkdir = "2.0"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
missing_docs_in_private_items = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"

[lints.rust]
unsafe_code = "forbid"
